--- a/MultiColumnForm/css/mobile.css
+++ b/MultiColumnForm/css/mobile.css
@@ -30,10 +30,12 @@ input {
   line-height: 1.5;
   font-size: 15pt;
   padding-left: 14pt;
+  width: 85%;
 }
 
 /* played with the label padding to get the room above and below closer to right */
 label {
+  font-size: 18pt;
   padding-top: 20pt;
   padding-bottom: 5pt
 }
@@ -42,7 +44,7 @@ label {
 select {
   border: 1px solid gray;
   font-size: 17pt;
-  width: 175pt
+  width: 91%;
 }
 
 /*expanded the text area to more closely match the ref example*/
@@ -52,6 +54,16 @@ textarea {
   color: white;
   line-height: 1.5;
   font-size: 15pt;
-  padding-left: 8pt;
-  padding-bottom: 100pt;
+  width: 89%;
+  height: 150pt;
+}
+
+/*changed the settings of the submit button to look like the ref example */
+.cbp-mc-submit {
+  width: 93%;
+  height: 40pt;
+  margin-top: 20pt;
+  margin-bottom: auto;
+  background-color: #10689a;
+  border: none;
 }
