created the tablet.css layout

--- a/MultiColumnForm/css/styles.css
+++ b/MultiColumnForm/css/styles.css
@@ -25,7 +25,7 @@ label {
 input, select, textarea {
   border: 2px solid white;
   background: inherit;
-  color: gray;
+  color: white;
 }
 
 /*select {
