--- a/MultiColumnForm/css/tablet.css
+++ b/MultiColumnForm/css/tablet.css
@@ -1,27 +1,58 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
-
-/*It looks like i only need some minor tweaks to duplicate the reference example*/
-
-/* shrinking the margin of the entire body to use up more of the space*/
-body {
-    margin: 5%;
+header {
+    margin-top: 5%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+    text-align: center;
 }
 
-/*widening the input, selet, and textarea elements*/
+header > span {
+    font-size: 150%;
+    letter-spacing: .3em;
+}
+
+header > h1 {
+}
+
+div.main {
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 10%;
+}
+
+label {
+    margin-top: 5%;
+    margin-bottom: 1%;
+}
+
 input {
-    width: 97%;
+    font-size: 15pt;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 90%;
 }
 
 select {
     width: 100%;
+    font-size: 15pt;
+    height: 25pt;
 }
 
 textarea {
-    width: 99%
+    width: 100%;
+    height: 150pt;
 }
 
-/*the submit button is relatively smaller on the tablet site than the mobile site*/
+.cbp-mc-submit-wrap {
+    margin-left: 35%;
+    margin-right: 35%;
+    padding-top: 5%;
+}
+
 .cbp-mc-submit {
-    width: 50%;
-    margin-left: 25%
+    width: 100%;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
