--- a/MultiColumnForm/css/mobile.css
+++ b/MultiColumnForm/css/mobile.css
@@ -1,60 +1,63 @@
-header {
-    margin-top: 10%;
-    margin-bottom: 10%;
-    margin-left: auto;
-    margin-right: auto;
-    width: 75%;
-    text-align: center;
-}
+@media(max-width: 30em) {
 
-header > span {
-    font-size: 150%;
-    letter-spacing: .3em;
-}
+  header {
+      margin-top: 10%;
+      margin-bottom: 10%;
+      margin-left: auto;
+      margin-right: auto;
+      width: 75%;
+      text-align: center;
+  }
 
-header > h1 {
-    margin-top: 5%;
-}
-div.main {
-    margin-top: 20%;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-bottom: 20%;
-}
+  header > span {
+      font-size: 150%;
+      letter-spacing: .3em;
+  }
 
-label {
-    margin-top: 15%;
-    margin-bottom: 2%;
-}
+  header > h1 {
+      margin-top: 5%;
+  }
+  div.main {
+      margin-top: 20%;
+      margin-left: 10%;
+      margin-right: 10%;
+      margin-bottom: 20%;
+  }
 
-input {
-    font-size: 15pt;
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    width: 90%;
-}
+  label {
+      margin-top: 15%;
+      margin-bottom: 2%;
+  }
 
-select {
-    width: 100%;
-    font-size: 15pt;
-    height: 25pt;
-}
+  input {
+      font-size: 15pt;
+      padding-left: 5%;
+      padding-right: 5%;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      width: 90%;
+  }
 
-textarea {
-    width: 100%;
-    height: 150pt;
-}
+  select {
+      width: 100%;
+      font-size: 15pt;
+      height: 25pt;
+  }
 
-.cbp-mc-submit-wrap {
-    margin-left: 5%;
-    margin-right: 5%;
-    padding-top: 15%;
-}
+  textarea {
+      width: 100%;
+      height: 150pt;
+  }
 
-.cbp-mc-submit {
-    width: 100%;
-    padding-top: 15px;
-    padding-bottom: 15px;
+  .cbp-mc-submit-wrap {
+      margin-left: 5%;
+      margin-right: 5%;
+      padding-top: 15%;
+  }
+
+  .cbp-mc-submit {
+      width: 100%;
+      padding-top: 15px;
+      padding-bottom: 15px;
+  }
 }
