moved the media queries to index.html

--- a/MultiColumnForm/css/desktop.css
+++ b/MultiColumnForm/css/desktop.css
@@ -1,4 +1,4 @@
-@media(min-width:55em) and (max-width: 70em) {
+@media(max-width: 70em) {
     body {
         /*tracer bullet*/
         /*background-color: cornflowerblue;*/
