--- a/MultiColumnForm/css/tablet.css
+++ b/MultiColumnForm/css/tablet.css
@@ -1,59 +1,68 @@
+/****settings for the tablet device view****/
 
-  header {
-      margin-top: 5%;
-      margin-left: auto;
-      margin-right: auto;
-      width: 75%;
-      text-align: center;
-  }
+/*settings for the header element (box)*/
+header {
+    margin-top: 5%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+    text-align: center;
+}
 
-  header > span {
-      font-size: 150%;
-      letter-spacing: .3em;
-  }
+/*set the text properties for the header parts*/
+header > span {
+    font-size: 150%;
+    letter-spacing: .3em;
+}
 
-  header > h1 {
-  }
+header > h1 {
+  font-size: 250%;
+}
 
-  div.main {
-      margin-left: 5%;
-      margin-right: 5%;
-      margin-bottom: 10%;
-  }
+/* set the margins for the tablet view*/
+div.main {
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 10%;
+}
 
-  label {
-      margin-top: 5%;
-      margin-bottom: 1%;
-  }
+/* tweak the settings for the label, input, slection, and textarea elements
+      to get them positioned and looking right */
+label {
+    margin-top: 5%;
+    margin-bottom: 1%;
+}
 
-  input {
-      font-size: 15pt;
-      padding-left: 5%;
-      padding-right: 5%;
-      padding-top: 5px;
-      padding-bottom: 5px;
-      width: 90%;
-  }
+input {
+    color: white;
+    font-size: 15pt;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 96%;
+}
 
-  select {
-      width: 100%;
-      font-size: 15pt;
-      height: 25pt;
-  }
+select {
+    width: 100%;
+    font-size: 15pt;
+    height: 25pt;
+}
 
-  textarea {
-      width: 100%;
-      height: 150pt;
-  }
+textarea {
+    width: 100%;
+    height: 150pt;
+}
 
-  .cbp-mc-submit-wrap {
-      margin-left: 35%;
-      margin-right: 35%;
-      padding-top: 5%;
-  }
+/* set position and size of the submit button */
+.cbp-mc-submit-wrap {
+    margin-left: 35%;
+    margin-right: 35%;
+    padding-top: 5%;
+}
 
-  .cbp-mc-submit {
-      width: 100%;
-      padding-top: 15px;
-      padding-bottom: 15px;
-  }
+.cbp-mc-submit {
+    width: 100%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
