--- a/VerticalTimeline/css/styles.css
+++ b/VerticalTimeline/css/styles.css
@@ -21,13 +21,14 @@ the have carets connecting them to the veritcal line*/
 body {
     font-family: 'Lato', Calibri, Arial, sans-serif;
     color: #47a3da;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 header {
   margin-top: 4%;
-  margin-bottom: 15%;
+  padding-left: 5%;
+  margin-bottom: 10%;
 }
 
 header > span {
@@ -51,7 +52,20 @@ nav {
 ul
 {
   list-style-type: none;
+  position: relative;
 }
+
+.cbp_tmtimeline:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 10px;
+  background: #afdcf8;
+  left: 25%;
+  margin-left: ;
+}
+
 
 time  {
   /*background-color: gray;*/
@@ -69,8 +83,9 @@ time span:last-child {
   font-size: 3em;
 }
 
+
 div.cbp_tmlabel {
-  background-color: #47a3da;
+  background-color: #6cbfee;
   color: white;
   margin-left: 25%;
   margin-top: 2%;
@@ -79,6 +94,11 @@ div.cbp_tmlabel {
   padding-left: 5%;
   padding-right: 5%;
 }
+
+.cbp_tmtimeline > li:nth-child(odd) .cbp_tmlabel {
+  background-color: #47a3da;
+}
+
 
 .cbp_tmlabel h2 {
   padding-bottom: 1%;
