--- a/VerticalTimeline/css/styles.css
+++ b/VerticalTimeline/css/styles.css
@@ -16,8 +16,10 @@ the icons are lined by a vertical line*/
 they alternate shades of blue.
 the have carets connecting them to the veritcal line*/
 
+/*grab that font*/
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
 
+/*set the font and margins for the main body*/
 body {
     font-family: 'Lato', Calibri, Arial, sans-serif;
     color: #47a3da;
@@ -25,12 +27,13 @@ body {
     margin-right: 5%;
 }
 
+/*setup the header "box"*/
 header {
   margin-top: 4%;
   padding-left: 5%;
   margin-bottom: 10%;
 }
-
+/*tweak the position and sizing of the spand and h1 within the header*/
 header > span {
   font-size: large;
   letter-spacing: .5em;
@@ -44,17 +47,19 @@ header > h1 {
   /*float: left;*/
 }
 
+/*turn the nav icons off until i can get them displayed correctly*/
 nav {
   display: none;
   text-align: right;
 }
 
-ul
-{
+/*turn off those pesky bullets*/
+ul {
   list-style-type: none;
   position: relative;
 }
 
+/*the line...still have a long way to go with the icons but the line is there*/
 .cbp_tmtimeline:before {
   content: '';
   position: absolute;
@@ -66,7 +71,7 @@ ul
   margin-left: ;
 }
 
-
+/*setup the time and date to look like the reference example*/
 time  {
   /*background-color: gray;*/
   width: 15%;
@@ -83,7 +88,7 @@ time span:last-child {
   font-size: 3em;
 }
 
-
+/*poistion the text of each food item correctly in the box*/
 div.cbp_tmlabel {
   background-color: #6cbfee;
   color: white;
@@ -93,13 +98,15 @@ div.cbp_tmlabel {
   padding-bottom: 2%;
   padding-left: 5%;
   padding-right: 5%;
+  border-radius: 10pt; /*round the corners of the text boxes*/
 }
 
+/*alternates the colors of the text boxes*/
 .cbp_tmtimeline > li:nth-child(odd) .cbp_tmlabel {
   background-color: #47a3da;
 }
 
-
+/*font size and bottom border for each h2 in the tmlabel boxes*/
 .cbp_tmlabel h2 {
   padding-bottom: 1%;
   border-bottom: 1px solid;
@@ -107,6 +114,7 @@ div.cbp_tmlabel {
   font-size: 200%;
 }
 
+/*font size for the <p> in the tmlabel boxes */
 .cbp_tmlabel p {
   font-size: 120%;
   font-weight: 300;
