--- a/VerticalTimeline/css/styles.css
+++ b/VerticalTimeline/css/styles.css
@@ -23,28 +23,6 @@ the have carets connecting them to the veritcal line*/
 body {
     font-family: 'Lato', Calibri, Arial, sans-serif;
     color: #47a3da;
-    margin-left: 5%;
-    margin-right: 5%;
-}
-
-/*setup the header "box"*/
-header {
-  margin-top: 4%;
-  padding-left: 5%;
-  margin-bottom: 10%;
-}
-/*tweak the position and sizing of the spand and h1 within the header*/
-header > span {
-  font-size: large;
-  letter-spacing: .5em;
-  font-weight: 700;
-}
-
-header > h1 {
-  margin-top: 1%;
-  font-weight: 700;
-  font-weight: 400;
-  /*float: left;*/
 }
 
 /*turn the nav icons off until i can get them displayed correctly*/
@@ -59,63 +37,18 @@ ul {
   position: relative;
 }
 
-/*the line...still have a long way to go with the icons but the line is there*/
-.cbp_tmtimeline:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 10px;
-  background: #afdcf8;
-  left: 25%;
-  margin-left: ;
-}
-
-/*setup the time and date to look like the reference example*/
-time  {
-  /*background-color: gray;*/
-  width: 15%;
-  float: left;
-  text-align: right;
-}
-
+/*set the color of the time to grayish*/
 time span:first-child {
-  font-size: 1em;
-  color: gray;
+  color: #bdd0db; /*grabbed this color from the ref example*/
 }
 
-time span:last-child {
-  font-size: 3em;
-}
-
-/*poistion the text of each food item correctly in the box*/
+/*colors of the text boxes*/
 div.cbp_tmlabel {
-  background-color: #6cbfee;
+  background-color: #6cbfee; /*grabbed this color from the ref example*/
   color: white;
-  margin-left: 25%;
-  margin-top: 2%;
-  padding-top: 2%;
-  padding-bottom: 2%;
-  padding-left: 5%;
-  padding-right: 5%;
-  border-radius: 10pt; /*round the corners of the text boxes*/
 }
 
 /*alternates the colors of the text boxes*/
 .cbp_tmtimeline > li:nth-child(odd) .cbp_tmlabel {
   background-color: #47a3da;
-}
-
-/*font size and bottom border for each h2 in the tmlabel boxes*/
-.cbp_tmlabel h2 {
-  padding-bottom: 1%;
-  border-bottom: 1px solid;
-  font-weight: 700;
-  font-size: 200%;
-}
-
-/*font size for the <p> in the tmlabel boxes */
-.cbp_tmlabel p {
-  font-size: 120%;
-  font-weight: 300;
 }
