more device specific house cleaning. now with tracer bullets for the views

--- a/VerticalTimeline/css/desktop.css
+++ b/VerticalTimeline/css/desktop.css
@@ -1,7 +1,7 @@
 body {
     margin-left: 5%;
     margin-right: 5%;
-    /*background-color: gray;*/
+    background-color: gray;
 }
 
 /*setup the header "box"*/
