--- a/ViewModeSwitch/css/styles.css
+++ b/ViewModeSwitch/css/styles.css
@@ -13,7 +13,6 @@ ul
   list-style-type: none;
 }
 
-
 /*turn off the nav icons for now*/
 header > nav {
   display: none;
@@ -37,6 +36,56 @@ div.cbp-vm-options {
 
 /*make the view switchers show up as icons*/
 
+@font-face {
+	font-family: 'fontawesome';
+	src:url('../fonts/fontawesome/fontawesome.eot');
+	src:url('../fonts/fontawesome/fontawesome.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/fontawesome/fontawesome.woff') format('woff'),
+		url('../fonts/fontawesome/fontawesome.ttf') format('truetype'),
+		url('../fonts/fontawesome/fontawesome.svg#fontawesome') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+
+.cbp-vm-options a:before {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  font-size: 30px;
+  margin: 2px;
+}
+
+.cbp-vm-grid::before {
+  font-family: 'fontawesome';
+	content: "\f00a";
+  color: #c0c0c0;
+}
+
+.cbp-vm-list::before {
+  font-family: 'fontawesome';
+	content: "\f00b";
+  color: #c0c0c0;
+}
+
+/*turn off the text next to the grid/list buttons*/
+.cbp-vm-options .cbp-vm-icon  {
+  font-size: 0;
+}
+
+/*icon for the add to cart button*/
+.cbp-vm-add:before {
+  font-family: 'fontawesome';
+	content: "\f055";
+}
+
+.cbp-vm-grid  {
+  /*background-color: gray;*/
+}
+
+.cbp-vm-list {
+  /*background-color: black;*/
+}
 
 /* Grid view setup */
 .cbp-vm-view-grid li {
@@ -48,8 +97,6 @@ div.cbp-vm-options {
     padding-bottom: 2%;
 }
 
-
-
 div.cbp-vm-view-grid li > div.cbp-vm-price {
   /*background-color: gray;*/
   color: #c0c0c0;
@@ -60,21 +107,16 @@ div.cbp-vm-view-grid li > a.cbp-vm-icon {
   color: white;
 }
 
-
-
-
 /*list view setup*/
 div.cbp-vm-view-list li {
   /*background-color: gray;*/
   margin-bottom: 15pt;
 }
 
-
 div.cbp-vm-view-list li > div.cbp-vm-price {
   /*background-color: cornflowerblue;*/
   color: #c0c0c0;
 }
-
 
 div.cbp-vm-view-list li > a.cbp-vm-icon {
   background-color: #47a3da;
