few more tweaks on the views

--- a/ViewModeSwitch/css/styles.css
+++ b/ViewModeSwitch/css/styles.css
@@ -8,9 +8,9 @@ body {
 }
 
 /*turn off the list bullets*/
-ul
-{
+ul {
   list-style-type: none;
+  padding-left: 0;
 }
 
 /*turn off the nav icons for now*/
