--- a/ViewModeSwitch/css/desktop.css
+++ b/ViewModeSwitch/css/desktop.css
@@ -20,8 +20,9 @@ header > span {
 /*tweak size, space, position of the header h1*/
 header > h1 {
   font-weight: 400;
-  width: 25%;
+  /*width: 25%;*/
 }
+
 
 /*tweak the properties of the each grid item*/
 .cbp-vm-view-grid li > a.cbp-vm-image > img {
@@ -44,6 +45,7 @@ div.cbp-vm-view-grid li > div.cbp-vm-price {
 div.cbp-vm-view-grid li > div.cbp-vm-details {
   /*background-color: gray;*/
   width: 80%;
+  min-height: 50pt;
   padding-left: 10%;
   padding-right: 10%;
   padding-bottom: 10%;
@@ -88,15 +90,15 @@ div.cbp-vm-view-list li > div.cbp-vm-details {
   /*background-color: gray;*/
   display: inline-block;
   vertical-align: middle;
-  width: 35%;
+  width: 25%;
 }
 
 div.cbp-vm-view-list li > a.cbp-vm-icon {
   display: inline-block;
   vertical-align: middle;
   margin-left: 20pt;
-  padding-left: 25pt;
-  padding-right: 25pt;
+  padding-left: 15pt;
+  padding-right: 15pt;
   padding-top: 8pt;
   padding-bottom: 8pt;
 
