--- a/ViewModeSwitch/css/desktop.css
+++ b/ViewModeSwitch/css/desktop.css
@@ -1,4 +1,5 @@
 body {
+  /*background-color: black;*/
   margin-left: 8%;
   margin-right: 8%;
 }
@@ -7,6 +8,7 @@ body {
 header {
   margin-top: 5%;
   margin-bottom: 5%;
+  text-align: left;
 
 }
 
@@ -23,6 +25,15 @@ header > h1 {
   /*width: 25%;*/
 }
 
+/* Grid view setup */
+.cbp-vm-view-grid li {
+    /*background-color: gray;*/
+    width: 33%;
+    display: inline-block;
+    text-align: center;
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
 
 /*tweak the properties of the each grid item*/
 .cbp-vm-view-grid li > a.cbp-vm-image > img {
