--- a/VerticalTimeline/css/tablet.css
+++ b/VerticalTimeline/css/tablet.css
@@ -10,13 +10,13 @@ header {
 }
 
 /*tweak the position and sizing of the spand and h1 within the header*/
-header > span {
+header span {
   font-size: large;
   letter-spacing: .5em;
   font-weight: 700;
 }
 
-header > h1 {
+header h1 {
   margin-top: 2%;
   font-size: 200%;
   font-weight: 400;
