--- a/VerticalTimeline/scss/tablet.scss
+++ b/VerticalTimeline/scss/tablet.scss
@@ -9,17 +9,21 @@ header {
   text-align: center;
 }
 /*tweak the position and sizing of the spand and h1 within the header*/
-header > span {
+header {
+  span {
   font-size: large;
   letter-spacing: .5em;
   font-weight: 700;
+  }
 }
 
-header > h1 {
+header {
+  h1 {
   margin-top: 2%;
   font-size: 200%;
   font-weight: 400;
   /*float: left;*/
+  }
 }
 
 /*the line...still have a long way to go with the icons but the line is there*/
