--- a/ViewModeSwitch/css/styles.css
+++ b/ViewModeSwitch/css/styles.css
@@ -91,12 +91,12 @@ div.cbp-vm-options {
   padding-bottom: 2%;
 }
 
-div.cbp-vm-view-grid li > div.cbp-vm-price {
+div.cbp-vm-view-grid li div.cbp-vm-price {
   /*background-color: gray;*/
   color: #c0c0c0;
 }
 
-div.cbp-vm-view-grid li > a.cbp-vm-icon {
+div.cbp-vm-view-grid li a.cbp-vm-icon {
   background-color: #47a3da;
   color: white;
 }
@@ -107,12 +107,12 @@ div.cbp-vm-view-list li {
   margin-bottom: 15pt;
 }
 
-div.cbp-vm-view-list li > div.cbp-vm-price {
+div.cbp-vm-view-list li div.cbp-vm-price {
   /*background-color: cornflowerblue;*/
   color: #c0c0c0;
 }
 
-div.cbp-vm-view-list li > a.cbp-vm-icon {
+div.cbp-vm-view-list li a.cbp-vm-icon {
   background-color: #47a3da;
   color: white;
 }
