--- a/ViewModeSwitch/scss/desktop.scss
+++ b/ViewModeSwitch/scss/desktop.scss
@@ -46,20 +46,24 @@ header > h1 {
   margin: 0;
 }
 
-div.cbp-vm-view-grid li > div.cbp-vm-price {
+div.cbp-vm-view-grid li {
+  div.cbp-vm-price {
   /*background-color: gray;*/
   font-size: 15pt;
   margin-top: 5pt;
   margin-bottom: 5pt;
+  }
 }
 
-div.cbp-vm-view-grid li > div.cbp-vm-details {
+div.cbp-vm-view-grid li {
+  div.cbp-vm-details {
   /*background-color: gray;*/
   width: 80%;
   min-height: 50pt;
   padding-left: 10%;
   padding-right: 10%;
   padding-bottom: 10%;
+  }
 }
 
 div.cbp-vm-view-grid li > a.cbp-vm-icon {
