--- a/MultiColumnForm/scss/main.scss
+++ b/MultiColumnForm/scss/main.scss
@@ -1,18 +1,45 @@
-body {
-  margin-left: 5%;
-  margin-right: 5%;
-  margin-top: 5%;
-  margin-bottom: 5%;
+header {
+  text-align: center;
+  margin-bottom: 10%;
 }
 
 
 label input, select, textarea{
   display: block;
-  width: 100%;
+  width: 98%;
 }
 
 button {
     width: 40%;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 30%;
+    margin-right: 30%;
 }
+
+//tablet settings
+@media(min-width: 30em) {
+  body {
+    background: lightgray;
+  }
+} //end tablet settings
+
+
+
+//desktop settings
+@media(min-width: 55em) {
+  body{
+    background: lightgray;
+  }
+  header {
+    display: block;
+    text-align: left;
+    nav {
+      float: right;
+    }
+  } //header
+  section {
+    float: left;
+    width: 26.6%;;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+  }
+} //end tablet settings
