refactored vertical timeline

--- a/VerticalTimeline/scss/desktop.scss
+++ b/VerticalTimeline/scss/desktop.scss
@@ -31,14 +31,13 @@ header > h1 {
   bottom: 0;
   width: 10px;
   background: #afdcf8;
-  left: 25%;
+  left: 22%;
 }
-
 
 /*setup the time and date to look like the reference example*/
 time  {
-  /*background-color: gray;*/
-  width: 10%;
+  // background-color: gray;
+  width: 15%;
   float: left;
   text-align: right;
 }
