--- a/ViewModeSwitch/scss/mobile.scss
+++ b/ViewModeSwitch/scss/mobile.scss
@@ -9,119 +9,130 @@ header {
   margin-top: 10%;
   margin-bottom: 10%;
   text-align: center;
-}
+  span {
+    font-size: 120%;
+    font-weight: 700;
+    letter-spacing: .4em;
+  }
+  h1 {
+    padding-top: 0%;
+    font-weight: 400;
+  }
+} // header
 
-/*tweak size, spacing, position of the header span*/
-header > span {
-  font-size: 120%;
-  font-weight: 700;
-  letter-spacing: .4em;
-}
-
-/*tweak size, space, position of the header h1*/
-header > h1 {
-  padding-top: 0%;
-  font-weight: 400;
-  /*width: 25%;*/
-}
 
 /* Grid view setup */
 .cbp-vm-view-grid li {
-    /*background-color: gray;*/
     width: 100%;
     display: inline-block;
     text-align: center;
     padding-top: 7%;
     padding-bottom: 5%;
-}
+    h3.cbp-vm-title {
+      font-size: 25pt;
+      margin: 0;
+    }
+    div.cbp-vm-price {
+      font-size: 20pt;
+      margin-top: 5pt;
+      margin-bottom: 5pt;
+    }
+    div.cbp-vm-details {
+      width: 75%;
+      min-height: 50pt;
+      padding-left: 10%;
+      padding-right: 10%;
+      padding-bottom: 10%;
+    }
+    a.cbp-vm-icon {
+      padding-left: 15pt;
+      padding-right: 15pt;
+      padding-top: 7pt;
+      padding-bottom: 7pt;
+    }
+} // end grid view
 
 
-/*tweak the properties of the each grid item*/
-.cbp-vm-view-grid li > a.cbp-vm-image > img {
-  /*background-color: cornflowerblue;*/
-}
-
-.cbp-vm-view-grid li > h3.cbp-vm-title {
-  /*background-color: gray;*/
-  font-size: 25pt;
-  margin: 0;
-}
-
-div.cbp-vm-view-grid li > div.cbp-vm-price {
-  /*background-color: gray;*/
-  font-size: 20pt;
-  margin-top: 5pt;
-  margin-bottom: 5pt;
-}
-
-div.cbp-vm-view-grid li > div.cbp-vm-details {
-  /*background-color: gray;*/
-  width: 75%;
-  min-height: 50pt;
-  padding-left: 10%;
-  padding-right: 10%;
-  padding-bottom: 10%;
-}
-
-div.cbp-vm-view-grid li > a.cbp-vm-icon {
-  padding-left: 15pt;
-  padding-right: 15pt;
-  padding-top: 7pt;
-  padding-bottom: 7pt;
-}
 
 /*tweak the properties of the each list item*/
 
 div.cbp-vm-view-list li {
-  /*background-color: gray;*/
   margin-bottom: 20%;
-}
+  a.cbp-vm-image > img {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 5%;
+    width: 20%;
+  }
+  h3.cbp-vm-title {
+    display: inline-block;
+    vertical-align: middle;
+    width: 40%;
+    margin-left: 10pt;
+    font-size: 15pt;
+  }
+  div.cbp-vm-price {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 15pt;
+    margin-left: 2pt;
+    padding-right: 20pt;
+    width: 10%;
+  }
+  div.cbp-vm-details {
+    margin-left: 10%;
+    margin-top: 5%;
+    margin-bottom: 3%;
+    width: 75%;
+    min-height: 60pt;
+  }
+  a.cbp-vm-icon {
+    margin-left: 20pt;
+    padding-left: 15pt;
+    padding-right: 15pt;
+    padding-top: 8pt;
+    padding-bottom: 8pt;
+  }
+} // end of list view
 
-div.cbp-vm-view-list li > a.cbp-vm-image > img {
-  /*background-color: cornflowerblue;*/
-  display: inline-block;
-  vertical-align: middle;
-  margin-left: 5%;
-  width: 20%;
-}
+// div.cbp-vm-view-list li > a.cbp-vm-image > img {
+//   display: inline-block;
+//   vertical-align: middle;
+//   margin-left: 5%;
+//   width: 20%;
+// }
+//
+// div.cbp-vm-view-list li > h3.cbp-vm-title {
+//   display: inline-block;
+//   vertical-align: middle;
+//   width: 40%;
+//   margin-left: 10pt;
+//   font-size: 15pt;
+// }
 
-div.cbp-vm-view-list li > h3.cbp-vm-title {
-  display: inline-block;
-  vertical-align: middle;
-  /*background-color: gray;*/
-  width: 40%;
-  margin-left: 10pt;
-  font-size: 15pt;
-}
+// div.cbp-vm-view-list li > div.cbp-vm-price {
+//   display: inline-block;
+//   vertical-align: middle;
+//   font-size: 15pt;
+//   margin-left: 2pt;
+//   padding-right: 20pt;
+//   width: 10%;
+// }
+//
+// div.cbp-vm-view-list li > div.cbp-vm-details {
+//   margin-left: 10%;
+//   margin-top: 5%;
+//   margin-bottom: 3%;
+//   width: 75%;
+//   min-height: 60pt;
+//
+// }
 
-div.cbp-vm-view-list li > div.cbp-vm-price {
-  /*background-color: cornflowerblue;*/
-  display: inline-block;
-  vertical-align: middle;
-  font-size: 15pt;
-  margin-left: 2pt;
-  padding-right: 20pt;
-  width: 10%;
-}
-
-div.cbp-vm-view-list li > div.cbp-vm-details {
-  /*background-color: gray;*/
-  /*display: block;*/
-  margin-left: 10%;
-  margin-top: 5%;
-  margin-bottom: 3%;
-  width: 75%;
-  min-height: 60pt;
-
-}
-
-div.cbp-vm-view-list li > a.cbp-vm-icon {
-  /*display: inline-block;*/
-  /*vertical-align: middle;*/
-  margin-left: 20pt;
-  padding-left: 15pt;
-  padding-right: 15pt;
-  padding-top: 8pt;
-  padding-bottom: 8pt;
-
-}
+// div.cbp-vm-view-list li > a.cbp-vm-icon {
+//   margin-left: 20pt;
+//   padding-left: 15pt;
+//   padding-right: 15pt;
+//   padding-top: 8pt;
+//   padding-bottom: 8pt;
+//
+// }
