--- a/NestedAccordion/scss/main.scss
+++ b/NestedAccordion/scss/main.scss
@@ -29,12 +29,14 @@ header {
 ul{
   list-style-type: none;
   h2 {
-    margin-top: 8%;
+    margin-top: 5%;
     padding-bottom: 2%;
     font-size: 250%;
     font-weight: 300;
     border-bottom: solid 1px lightgray;
+    cursor: pointer;
   }
+
   p {
     color: gray;
     font-size: 120%;
@@ -42,9 +44,11 @@ ul{
   }
   h3 {
     letter-spacing: .3em;
+    cursor: pointer;
   }
   h4 {
     color: gray;
+    cursor: pointer;
   }
 } // end ul
 
@@ -56,4 +60,13 @@ ul{
 
 .closed ~ ul { //ul (subaccordion) that is a sibling of a header with a class of closed
   display: none;
+}
+
+//add arrows
+.closed:before {
+  content: "\2192  ";
+}
+
+.open:before {
+  content: "\2193  "
 }
