adjust form margins in desktop view

--- a/MultiColumnForm/scss/main.scss
+++ b/MultiColumnForm/scss/main.scss
@@ -72,6 +72,11 @@ button {
   body{
     // background: lightgray;
   }
+  form {
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 5%;
+  }
   header {
     display: block;
     text-align: left;
