--- a/DropDownMenu/scss/_grid.scss
+++ b/DropDownMenu/scss/_grid.scss
@@ -1,23 +1,45 @@
+header {
+  // background-color: lightblue;
+  // margin-top: 10%;
+  margin-left: 8%;
+  margin-right: 8%;
+}
+
+a {
+  text-decoration: none;
+}
+
+nav {
+  padding-left: 10%;
+  padding-bottom: 2ex;
+  border-bottom: 3px solid lightgray;
+}
+
 ul {
+    display: inline-block;
+    width: 33%;
     list-style-type: none;
-    padding-left: 0;
+}
+a.active {
+  background-color: lightgray;
+  padding-bottom: 3ex;
 }
 section {
   display: none;
+  h3 {
+    margin-top: 0;
+  }
 }
 section.active {
   display: inherit;
+  background-color: lightgray;
 }
-
-
-
-// .grid {
-//   background-color: gray;
-// }
-// .col-1-12 {
+//
+//
+// section.active {
 //   background-color:lightgray;
 //   float: left;
-//   width: 7.3%;
-//   text-align: center;
+//   width: 30%;
 //   margin-right: 1%;
+//   margin-bottom: 10%;
 // }
