--- a/ResponsiveIcons/scss/_grid.scss
+++ b/ResponsiveIcons/scss/_grid.scss
@@ -1,10 +1,19 @@
+ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
 .grid {
   background-color: gray;
 }
-.col-1-12 {
-  background-color:lightgray;
+li {
+  // background-color:lightgray;
   float: left;
-  width: 32%;
+  width: 33%;
   text-align: center;
-  margin-right: 1%;
+  // border: 1px solid black;
+}
+
+li:hover {
+  background-color: lightgray;
 }
