--- a/ResponsiveIcons/scss/main.scss
+++ b/ResponsiveIcons/scss/main.scss
@@ -100,7 +100,31 @@ textarea {
 @import 'tablet';
 @import 'desktop';
 
+body {
+  color: #47a3da;
+}
 
+a {
+  text-decoration: none;
+  color: #47a3da;
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+li:hover {
+  color: white;
+  background-color: #47a3da;
+  a {
+    color: white;
+  }
+}
+
+.grid {
+  // background-color: gray;
+}
 
 
 
