--- a/DropDownMenu/scss/_desktop.scss
+++ b/DropDownMenu/scss/_desktop.scss
@@ -4,6 +4,14 @@ header {
 
 header {
   margin-left: 5%;
+  h1 {
+    
+  }
+  h2 {
+    letter-spacing: .5em;
+    font-size: 1em;
+    font-weight: 400;
+  }
 }
 
 a { //remove underline and change default color of anchor tage
