--- a/DropDownMenu/scss/_desktop.scss
+++ b/DropDownMenu/scss/_desktop.scss
@@ -3,14 +3,19 @@ header {
 }
 
 header {
-  margin-left: 5%;
+  margin-left: 8%;
+  margin-top: 4%;
+  padding-bottom: 5%;
+
   h1 {
     font-weight: 400;
+    margin-top: 1%;
   }
   h2 {
-    letter-spacing: .5em;
+    letter-spacing: .6em;
     font-size: 1em;
-    font-weight: 400;
+    // font-weight: 400;
+    margin-bottom: 0;
   }
 }
 
@@ -19,7 +24,7 @@ a { //remove underline and change default color of anchor tage
 }
 
 nav {
-  padding-left: 5%;
+  padding-left: 8%;
   padding-bottom: 2ex;
   border-bottom: 3px solid #47a3da;
   a {
