--- a/ResponsiveIcons/scss/_desktop.scss
+++ b/ResponsiveIcons/scss/_desktop.scss
@@ -8,6 +8,17 @@ a {
   color: #47a3da;
 }
 
+header {
+
+  h1 {
+
+  }
+  h2 {
+    font-size: 1em;
+    letter-spacing: .5em;
+  }
+}
+
 
 ul {
   list-style-type: none;
