format header spacing

--- a/ResponsiveIcons/scss/_desktop.scss
+++ b/ResponsiveIcons/scss/_desktop.scss
@@ -9,13 +9,17 @@ a {
 }
 
 header {
-
+    margin-left: 7%;
+    margin-top: 4%;
+    margin-bottom: 5%;
   h1 {
     font-weight: 400;
+    margin-top: 0;
   }
   h2 {
     font-size: 1em;
     letter-spacing: .5em;
+    margin-bottom: 1%;
   }
 }
 
