menu bar layout complete

--- a/DropDownMenu/scss/_desktop.scss
+++ b/DropDownMenu/scss/_desktop.scss
@@ -33,6 +33,9 @@ nav {
     padding-left: 2em;
     padding-right: 2em;
   }
+  a:hover {
+    color: #47a3da;
+  }
   a.active {
     color: white;
     background-color: #47a3da;
