--- a/DropDownMenu/scss/_grid.scss
+++ b/DropDownMenu/scss/_grid.scss
@@ -1,6 +1,10 @@
 ul {
     display: inline-block;
+    // float: left;
     width: 33%;  //desktop 3 column layout
     list-style-type: none;
     padding-left: 0;
+    margin-bottom: 0;
+    margin-top: 0;
+    // background-color: lightgray;
 }
