tweaked layout of menu panels...still needs work

--- a/DropDownMenu/scss/_desktop.scss
+++ b/DropDownMenu/scss/_desktop.scss
@@ -44,18 +44,19 @@ nav {
 
 
 section {
-  // padding-left: 11%;
-  // padding-right: 11%;
+  padding-left: 5%;
+  padding-right: 5%;
   display: none;
+  padding-bottom: 5%;
   // margin-bottom: 10%;
   h3 {
-    margin-top: 0%;
+    margin-top: 0;
     margin-bottom: 0;
     font-size: 1.5em;
     font-weight: 300;
   }
   li {
-    margin-top: 0;
+    margin-top: 5pt;
     margin-bottom: 0;
     font-weight: 300;
   }
