--- a/ResponsiveIcons/scss/_desktop.scss
+++ b/ResponsiveIcons/scss/_desktop.scss
@@ -3,11 +3,6 @@ body {
     color: #47a3da;
 }
 
-a {
-  text-decoration: none;
-  color: #47a3da;
-}
-
 header {
     margin-left: 7%;
     margin-top: 4%;
@@ -23,44 +18,57 @@ header {
   }
 }
 
-
+section.grid {
+  margin-left: 5%;
+  // margin-right: 5%;
+  // padding-right: 0;
+}
 ul {
   list-style-type: none;
   padding-left: 0;
   li {
-    border: solid 1px lightgray;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    h3 {
+      font-size: 2em;
+    }
+    span {
+      font-size: 9em;
+    }
     h4 {
       color: white;
     }
+    hr.above-title {
+      align-items: center;
+      border-top: 6px solid #47a3da;
+      width: 50%;
+      margin-left: 25%;
+    }
+    hr.below-title {
+      align-items: center;
+      border-top: 6px solid white;
+      width: 50%;
+      margin-left: 25%;
+    }
   }
-}
+} // end UL
 
 li:hover {
   cursor: pointer;
   color: white;
   background-color: #47a3da;
-  a {
-    color: white;
-  }
   h4 {
     display: inherit;
+    font-weight: 400;
   }
-}
-
-hr.above-title {
-  align-items: center;
-  border-top: 6px solid #47a3da;
-  width: 40%;
-  margin-left: 30%;
-}
-
-hr.below-title {
-  align-items: center;
-  border-top: 6px solid white;
-  width: 40%;
-  margin-left: 30%;
-}
-
-span {
-  font-size: 8em;
+  // hr.above-title {
+  //   display: none;
+  // }
+  // hr.below-title {
+  //   display: inherit;
+  //   align-items: center;
+  //   border-top: 6px solid white;
+  //   width: 50%;
+  //   margin-left: 25%;
+  // }
 }
