--- a/DropDownMenu/scss/_tablet.scss
+++ b/DropDownMenu/scss/_tablet.scss
@@ -1,3 +1,27 @@
 body {
-  background-color: lightgray;
+  // background-color: lightgray;
+}
+div.content {
+  padding-top: 10%;
+}
+
+a.list {
+  padding-left: 10%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  display: block;
+  color: #999;
+  font-size: 1.5em;
+  border-bottom: 4px solid #47a3da;
+}
+a.list:hover {
+  color: #47a3da;
+}
+a.list.active {
+  background-color: #47a3da;
+  color: white;
+}
+
+nav {
+  display: none;
 }
