tweaked tablet view

--- a/DropDownMenu/scss/_tablet.scss
+++ b/DropDownMenu/scss/_tablet.scss
@@ -1,6 +1,4 @@
-body {
-  // background-color: lightgray;
-}
+
 div.content {
   padding-top: 10%;
 }
@@ -24,4 +22,15 @@ a.list.active {
 
 nav {
   display: none;
+}
+
+section {
+  li h3 {
+    font-size: 1.5em;
+    font-weight: 300;
+  }
+  li a {
+    font-size: .75em;
+    font-weight: 300;
+  }
 }
