--- a/DropDownMenu/scss/_grid.scss
+++ b/DropDownMenu/scss/_grid.scss
@@ -1,6 +1,5 @@
 ul {
     display: inline-block;
-    // float: left;
     width: 20%;  //desktop 3 column layout
     list-style-type: none;
     padding-left: 5%;
@@ -8,4 +7,10 @@ ul {
     margin-bottom: 0;
     margin-top: 5%;
     // background-color: lightgray;
+}
+
+@media(max-width: 550px){
+ul {
+    width: 90%;
+  }
 }
